--- a/style.css
+++ b/style.css
@@ -5,3 +5,28 @@
   --clr-semi-dark: #3b4050;
   --clr-dark: #2e323f;
 }
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  font-family: "monserat", sans-serif;
+  font-size: 1.125rem;
+  color: var(--clr-dark);
+  margin: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+a {
+  text-decoration: none;
+  color: var(--clr-dark);
+}
