--- a/style.css
+++ b/style.css
@@ -30,6 +30,12 @@ img {
 a {
   text-decoration: none;
   color: var(--clr-dark);
+  transition: opacity 0.5s ease;
+}
+
+a:hover,
+a:focus {
+  opacity: 0.6;
 }
 
 ul {
@@ -64,7 +70,7 @@ h2 {
 }
 
 p {
-  font-size: clamp(0.8rem, 3vw, 1rem);
+  font-size: clamp(0.8rem, 1vw, 1rem);
 }
 
 /* Layout Classes */
@@ -88,11 +94,6 @@ p {
   font-size: 0.85rem;
   color: var(--clr-light);
   margin: 0 0.5em;
-}
-
-.nav-link:hover,
-.nav-link:focus {
-  opacity: 0.7;
 }
 
 /* Hero Section */
@@ -165,7 +166,7 @@ p {
 }
 
 .box-title {
-  font-size: clamp(1.2rem, 4vw, 1.66rem);
+  font-size: clamp(1.2rem, 2vw, 1.66rem);
 }
 
 /* Footer Section */
@@ -193,4 +194,43 @@ p {
 .footer-row a {
   font-size: clamp(0.8rem, 3vw, 1rem);
   color: var(--clr-light);
+}
+
+@media (min-width: 700px) {
+  .section-one .row {
+    display: flex;
+    gap: 2em;
+  }
+
+  .main-header {
+    text-align: left;
+  }
+
+  .img-container {
+    max-height: 400px;
+    overflow: hidden;
+  }
+
+  .main-img {
+    object-position: 0 -70px;
+  }
+
+  /* Aside Section */
+  .aside {
+    display: flex;
+    gap: 1em;
+  }
+
+  .footer-row {
+    display: flex;
+    gap: 1em;
+  }
+
+  .footer-row .col.footer-col-about {
+    flex: 2;
+  }
+
+  .footer-row > .col {
+    flex: 1;
+  }
 }
