--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ p {
 }
 
 .footer-col-header {
-  font-size: clamp(1rem, 2vw, 1.66rem);
+  font-size: clamp(1rem, 2vw, 1.2rem);
   color: var(--clr-primary);
 }
 
@@ -192,7 +192,7 @@ p {
 }
 
 .footer-row a {
-  font-size: clamp(0.8rem, 3vw, 1rem);
+  font-size: clamp(0.8rem, 1vw, 1rem);
   color: var(--clr-light);
 }
 
@@ -300,5 +300,11 @@ p {
     margin-top: 0;
     flex-direction: column;
     gap: unset;
+  }
+
+  /* Footer  */
+  .main-footer p,
+  .main-footer a {
+    color: var(--clr-gray);
   }
 }
