--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ p {
   background-color: var(--clr-dark);
   color: var(--clr-light);
   text-align: center;
-  min-height: 5rem;
+  min-height: 7rem;
 }
 
 .logo {
@@ -106,7 +106,7 @@ p {
 
 .hero-text {
   font-size: clamp(2.5rem, 7vw, 5rem);
-  line-height: 1.2;
+  line-height: 1;
   padding: 0 0 1em;
 }
 
@@ -197,6 +197,10 @@ p {
 }
 
 @media (min-width: 700px) {
+  .nav {
+    min-height: 5rem;
+  }
+
   .section-one .row {
     display: flex;
     gap: 2em;
